Fixed bug where content longer than 100% view height breaks the view.

--- a/css/index.css
+++ b/css/index.css
@@ -11,7 +11,7 @@ html {
 }
 
 .expand {
-  height: 100vh !important;
+  min-height: 100vh !important;
 }
 
 .footer {
